# iris

./: CMakeLists.txt  README.md
cli/: CMakeLists.txt  main.cpp
include/: BitMap.hpp  Color.hpp  Parser.hpp
scenes/test-01/: setup.lua  test-01.mtl
scenes/test-02/: setup.lua  test-02.mtl
scenes/test-03/: setup.lua
scenes/test-04/: setup.lua  test-04.mtl
scenes/test-05/: setup.lua  test-05.mtl
src/: Atmosphere.cpp  Atmosphere.hpp  BitMap.cpp  BitMap.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Core.cpp  Core.hpp  DataSet.cpp  DataSet.hpp  KdTree.cpp  KdTree.hpp  Makefile  Material.hpp  Math.cpp  Math.hpp  Mesh.cpp  Mesh.hpp  MeshLoader.cpp  MeshLoader.hpp  Parser.cpp  Parser.hpp  PathTracer.cpp  PathTracer.hpp  Render.hpp  Scene.cpp  Scene.hpp  SceneGraph.hpp  Script.cpp  Script.hpp  Sensor.cpp  Sensor.hpp  Settings.cpp  Settings.hpp  Spectrum.cpp  Spectrum.hpp  Window.cpp  (+2 more)
utils/: cmf.py
